--- a/src/style/SideSec.css
+++ b/src/style/SideSec.css
@@ -61,6 +61,9 @@
 }
 .secSide>p span{
     margin-left:.2rem;
+  display: block;
+  width:70%;
+  word-break:break-all;
 }
 .fade-enter-active,
 .fade-leave-active{
